--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "gtvt2",
+  "name": "lqd30",
   "authors": [
-    "Trần Doãn Linh <linhtd@caodanggtvt2.edu.vn>"
+    "Ho Tuan Kiet <tuankiet65@gmail.com>"
   ],
   "description": "",
   "main": "",
